# cmake-patch-file

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  hello.c  value.h.patch
.github/workflows/: ci.yml
include/: other.h  value.h
